# rocket-rs-posts

./: Cargo.toml  README.md  Rocket.toml.tmpl
migrations/2022-02-05-115024_create_posts/: up.sql
src/: main.rs  schema.rs  stats.rs
src/database/: mod.rs  users.rs
src/posts/: mod.rs  models.rs  routes.rs
src/users/: models.rs
